--- a/beck_app/src/main/webapp/user_views/communication/List.xhtml
+++ b/beck_app/src/main/webapp/user_views/communication/List.xhtml
@@ -14,14 +14,13 @@
         </ui:define>
 
         <ui:define name="body">
-
             <p:panel  header="#{bundle.ListCommunicationTitle}">
                 
                     <p:tabView id="tabViews" >
                         <p:ajax event="tabChange"  update=":tabViews:CommunicationListFormDo:datalist3,:tabViews:CommunicationListFormOd:datalist2"/>                            
                         <p:tab title="Wiadomości odebrane">
                             <h:form id="CommunicationListFormOd">
-                            <p:dataTable id="datalist2" value="#{communicationController.getItems()}" var="item"
+                                <p:dataTable id="datalist2" value="#{communicationController.getItemsDo(userController.selected)}" var="item"
                                          selectionMode="single" selection="#{communicationController.selected}"
                                          paginator="true"
                                          rowKey="#{item.id}"
@@ -66,7 +65,7 @@
                         </p:tab>
                         <p:tab title="Wiadomości wysłane">   
                             <h:form id="CommunicationListFormDo">
-                                <p:dataTable id="datalist3" value="#{communicationController.items}" var="item"
+                                <p:dataTable id="datalist3" value="#{communicationController.getItemsFrom(userController.selected)}" var="item"
                                              selectionMode="single" selection="#{communicationController.selected}"
                                              paginator="true"
                                              rowKey="#{item.id}"
@@ -103,8 +102,8 @@
                                     </p:column>
                                     <f:facet name="footer">
                                         <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{communicationController.prepareCreate}" update=":CommunicationCreateForm_1" oncomplete="PF('CommunicationCreateDialog1').show()"/>
-                                        <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":CommunicationViewForm_1" oncomplete="PF('CommunicationViewDialog_1').show()" disabled="#{empty communicationController.selected}"/>
-                                        <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":CommunicationEditForm_1" oncomplete="PF('CommunicationEditDialog_1').show()" disabled="#{empty communicationController.selected}"/>
+                                        <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":CommunicationViewForm_1" oncomplete="PF('CommunicationViewDialog1').show()" disabled="#{empty communicationController.selected}"/>
+                                        <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":CommunicationEditForm_1" oncomplete="PF('CommunicationEditDialog1').show()" disabled="#{empty communicationController.selected}"/>
                                        
                                     </f:facet>
                                 </p:dataTable>
