--- a/beck_app/src/main/webapp/admin_views/imagesEvent/View.xhtml
+++ b/beck_app/src/main/webapp/admin_views/imagesEvent/View.xhtml
@@ -16,10 +16,10 @@
                         <h:outputText value="#{imagesEventController.selected.idImages}" title="#{bundle.ViewImagesEventTitle_idImages}"/>
                         <h:outputText value="#{bundle.ViewImagesEventLabel_imageDesc}"/>
                         <h:outputText value="#{imagesEventController.selected.imageDesc}" title="#{bundle.ViewImagesEventTitle_imageDesc}"/>
-                        <h:outputText value="#{bundle.ViewImagesEventLabel_imagePath}"/>
-                        <h:outputText value="#{imagesEventController.selected.imagePath}" title="#{bundle.ViewImagesEventTitle_imagePath}"/>
                         <h:outputText value="#{bundle.ViewImagesEventLabel_eventId}"/>
                         <h:outputText value="#{imagesEventController.selected.eventId}" title="#{bundle.ViewImagesEventTitle_eventId}"/>
+                        <h:outputText value="#{bundle.ViewImagesEventLabel_images}"/>
+                        <h:outputText value="#{imagesEventController.selected.images}" title="#{bundle.ViewImagesEventTitle_images}"/>
                     </p:panelGrid>
                     <p:commandButton value="#{bundle.Close}" onclick="ImagesEventViewDialog.hide()"/>
                 </h:panelGroup>
