--- a/beck_app/src/main/webapp/admin_views/imagesNotice/View.xhtml
+++ b/beck_app/src/main/webapp/admin_views/imagesNotice/View.xhtml
@@ -16,10 +16,10 @@
                         <h:outputText value="#{imagesNoticeController.selected.idimagesNotice}" title="#{bundle.ViewImagesNoticeTitle_idimagesNotice}"/>
                         <h:outputText value="#{bundle.ViewImagesNoticeLabel_imagesDesc}"/>
                         <h:outputText value="#{imagesNoticeController.selected.imagesDesc}" title="#{bundle.ViewImagesNoticeTitle_imagesDesc}"/>
-                        <h:outputText value="#{bundle.ViewImagesNoticeLabel_imagesPath}"/>
-                        <h:outputText value="#{imagesNoticeController.selected.imagesPath}" title="#{bundle.ViewImagesNoticeTitle_imagesPath}"/>
                         <h:outputText value="#{bundle.ViewImagesNoticeLabel_eventId}"/>
                         <h:outputText value="#{imagesNoticeController.selected.eventId}" title="#{bundle.ViewImagesNoticeTitle_eventId}"/>
+                        <h:outputText value="#{bundle.ViewImagesNoticeLabel_images}"/>
+                        <h:outputText value="#{imagesNoticeController.selected.images}" title="#{bundle.ViewImagesNoticeTitle_images}"/>
                     </p:panelGrid>
                     <p:commandButton value="#{bundle.Close}" onclick="ImagesNoticeViewDialog.hide()"/>
                 </h:panelGroup>
