--- a/beck_app/src/main/webapp/template_admin.xhtml
+++ b/beck_app/src/main/webapp/template_admin.xhtml
@@ -41,6 +41,8 @@
                             <p:menuitem value="Track" outcome="/admin_views/track/List.xhtml" />
                             <p:menuitem value="User" outcome="/admin_views/user/List.xhtml" />
                             <p:menuitem value="UserGroups" outcome="/admin_views/userGroups/List.xhtml" />
+                            <p:menuitem value="EventImg" outcome="/admin_views/imagesEvent/List.xhtml" />
+                            <p:menuitem value="NoticeImg" outcome="/admin_views/imagesNotice/List.xhtml" />
                             <p:menuitem value="Wyloguj" action="#{userController.logout()}" outcome="/login/wylogowano.xhtml" />
                     </p:menubar>
                 </h:form>
