--- a/beck_app/src/main/webapp/admin_views/imagesEvent/List.xhtml
+++ b/beck_app/src/main/webapp/admin_views/imagesEvent/List.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/template_admin.xhtml">
 
 
         <ui:define name="title">
@@ -41,15 +41,15 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListImagesEventTitle_imagePath}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.imagePath}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
                                 <h:outputText value="#{bundle.ListImagesEventTitle_eventId}"/>
                             </f:facet>
                             <h:outputText value="#{item.eventId}"/>
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.ListImagesEventTitle_images}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.images}"/>
                         </p:column>
                         <f:facet name="footer">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{imagesEventController.prepareCreate}" update=":ImagesEventCreateForm" oncomplete="PF('ImagesEventCreateDialog').show()"/>
