--- a/beck_app/src/main/webapp/template_admin.xhtml
+++ b/beck_app/src/main/webapp/template_admin.xhtml
@@ -43,7 +43,7 @@
                             <p:menuitem value="UserGroups" outcome="/admin_views/userGroups/List.xhtml" />
                             <p:menuitem value="EventImg" outcome="/admin_views/imagesEvent/List.xhtml" />
                             <p:menuitem value="NoticeImg" outcome="/admin_views/imagesNotice/List.xhtml" />
-                            <p:menuitem value="Wyloguj" action="#{userController.logout()}" outcome="/login/wylogowano.xhtml" />
+                            <p:menuitem value="Wyloguj" action="#{userController.logout()}" />
                     </p:menubar>
                 </h:form>
             </p:layoutUnit>
