--- a/beck_app/src/main/webapp/admin_views/imagesNotice/List.xhtml
+++ b/beck_app/src/main/webapp/admin_views/imagesNotice/List.xhtml
@@ -4,7 +4,8 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:o="http://omnifaces.org/ui">
 
     <ui:composition template="/template_admin.xhtml">
 
@@ -24,8 +25,8 @@
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
 
-                        <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
-                        <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
+                        <p:ajax event="rowSelect"   update="createButton"/>
+                        <p:ajax event="rowUnselect" update="createButton"/>
 
                         <p:column>
                             <f:facet name="header">
@@ -46,24 +47,22 @@
                             <h:outputText value="#{item.eventId}"/>
                         </p:column>
                         <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListImagesNoticeTitle_images}"/>
+                            <f:facet name="header">  
+                                    <h:outputText value="Obraz:"/>
                             </f:facet>
-                            <h:outputText value="#{item.images}"/>
+                            <p:graphicImage value="#{imageController.image}" >
+                                <f:param name="id_img" value="#{item.idimagesNotice}" />
+                            </p:graphicImage>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{imagesNoticeController.prepareCreate}" update=":ImagesNoticeCreateForm" oncomplete="PF('ImagesNoticeCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":ImagesNoticeViewForm" oncomplete="PF('ImagesNoticeViewDialog').show()" disabled="#{empty imagesNoticeController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":ImagesNoticeEditForm" oncomplete="PF('ImagesNoticeEditDialog').show()" disabled="#{empty imagesNoticeController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{imagesNoticeController.destroy}" update=":growl,datalist" disabled="#{empty imagesNoticeController.selected}"/>
-                        </f:facet>
+                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{imagesNoticeController.prepareCreate}" update=":ImagesNoticeCreateForm2" oncomplete="PF('ImagesNoticeCreateDialog2').show()"/>
+                                         </f:facet>
                     </p:dataTable>
                 </p:panel>
             </h:form>
 
-            <ui:include src="Create.xhtml"/>
-            <ui:include src="Edit.xhtml"/>
-            <ui:include src="View.xhtml"/>
+            <ui:include src="Create_1.xhtml"/>
+
         </ui:define>
     </ui:composition>
 
