--- a/beck_app/src/main/webapp/index.xhtml
+++ b/beck_app/src/main/webapp/index.xhtml
@@ -1,27 +1,20 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-        <h:outputStylesheet name="css/jsfcrud.css"/>
-    </h:head>
-    <h:body>
-        Witamy w BECK!!!
-        <br />
-        <h:link outcome="/login/login" value="Zaloguj do portalu"/>
-        <br />
-        <h:link outcome="/login/register" value="Zarejestruj"/>
-    </h:body>
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
+    <ui:composition template="/template_guest.xhtml">
 
+        <ui:define name="title"> 
+            Witamy w BECK!!!
+        </ui:define>
 
+        <ui:define name="body"> 
+            tutaj bd artykuł
+        </ui:define>
 
-
-
-
-
-
+    </ui:composition>
 
 </html>
 
