--- a/beck_app/src/main/webapp/login/login.xhtml
+++ b/beck_app/src/main/webapp/login/login.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/login_template.xhtml">
+    <ui:composition template="/template_guest.xhtml">
     <ui:define name="title">Zaloguj się...</ui:define>
     <ui:define name="body">
     <h:form>          
