--- a/beck_app/src/main/webapp/template_user.xhtml
+++ b/beck_app/src/main/webapp/template_user.xhtml
@@ -1,26 +1,33 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 
-    <h:head>
-        <title><ui:insert name="title">Default Title</ui:insert></title>
-        <h:outputStylesheet library="css" name="jsfcrud.css"/>
-        <h:outputScript library="js" name="jsfcrud.js"/>
-    </h:head>
+    <f:view contentType="text/html">
+        <h:head>
+            <f:facet name="first">
+                <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
+                <title>B.E.C.K Społeczność rowerzystów</title>
+            </f:facet>
+        </h:head>
 
-    <h:body>
+        <h:body>
 
-        <p:growl id="growl" life="3000" />
+            <p:layout fullPage="true">
 
-        <p:layout fullPage="true">
-            <p:layoutUnit position="north" size="65" header="#{bundle.AppName}">       
-                <h:form id="menuForm">
-                    <h:panelGrid columns="2" cellpadding="0">                              
-                        <p:menubar>        
+                <p:layoutUnit position="north" size="175" resizable="true" closable="true" collapsible="true">
+                  <p:graphicImage  value="#{FacesContext.getCurrentInstance().getExternalContext()}/resources/logo/logo.jpg" />  
+                </p:layoutUnit>
+
+                <p:layoutUnit position="south" size="50" closable="true" collapsible="true">
+                   Autorzy: Robert Piotrowski i Patryk Bierła
+                </p:layoutUnit>
+
+                <p:layoutUnit position="west" size="175" header="Menu" collapsible="true">
+                     <h:form id="menuForm">
+                    <p:menu>                     
                             <p:menuitem value="#{bundle.Home}" outcome="/user_views/main.xhtml" />
                             <p:menuitem value="Grupy" outcome="/user_views/manage_groups/manage_groups.xhtml" />
                             <p:menuitem value="Wydarzenia" outcome="/user_views/main.xhtml" />
@@ -28,28 +35,20 @@
                             <p:menuitem value="Dodaj nową recenzje" outcome="/user_views/reviews/AddNewReview.xhtml" />
                             <p:menuitem value="Poczta" outcome="/user_views/communication/List.xhtml" />
                             <p:menuitem value="Wyloguj" action="#{userController.logout}" />
-                        </p:menubar>
-                          <p:themeSwitcher value="#{themeService.chosen}" id="advanced" style="width:165px" effect="fade" >
-                        <f:selectItem itemLabel="Choose Theme" itemValue="" />
-                        <f:selectItems value="#{themeService.themes}" />
-                    </p:themeSwitcher>
-                    </h:panelGrid>
-                </h:form>
-            </p:layoutUnit>
+                    </p:menu>
+                     </h:form>
+                </p:layoutUnit>
+                 <p:growl id="growl" life="3000" />
+                <p:layoutUnit position="center">
+                    
+                    <title><ui:insert name="title">Default Title</ui:insert></title>
+                     <ui:insert name="body"/>
+                </p:layoutUnit>
 
+            </p:layout>
 
+        </h:body>
 
-            <p:layoutUnit position="center">
-                <ui:insert name="body"/>
-            </p:layoutUnit>
-
-
-            <p:layoutUnit position="south" size="60">
-                <ui:insert name="footer"/>
-            </p:layoutUnit>
-
-        </p:layout>
-
-    </h:body>
-
+    </f:view>
 </html>
+
