--- a/beck_app/src/main/webapp/template_user.xhtml
+++ b/beck_app/src/main/webapp/template_user.xhtml
@@ -26,16 +26,23 @@
                 </p:layoutUnit>
 
                 <p:layoutUnit position="west" size="175" header="Menu" collapsible="true">
-                     <h:form id="menuForm">
-                    <p:menu>                     
-                            <p:menuitem value="#{bundle.Home}" outcome="/user_views/main.xhtml" />
-                            <p:menuitem value="Grupy" outcome="/user_views/manage_groups/manage_groups.xhtml" />
-                            <p:menuitem value="Wydarzenia" outcome="/user_views/main.xhtml" />
-                            <p:menuitem value="Recenzje i artykuły" outcome="/user_views/reviews/List.xhtml" />
-                            <p:menuitem value="Dodaj nową recenzje" outcome="/user_views/reviews/AddNewReview.xhtml" />
-                            <p:menuitem value="Poczta" outcome="/user_views/communication/List.xhtml" />
-                            <p:menuitem value="Wyloguj" action="#{userController.logout}" />
-                    </p:menu>
+                    <h:form id="menuForm">
+                        <p:growl autoUpdate="true"/>
+                        <p:menubar>                    
+
+                              
+                                                  <p:menuitem value="#{bundle.Home}" outcome="/user_views/main.xhtml" />
+                                                  <p:menuitem value="Grupy" outcome="/user_views/manage_groups/manage_groups.xhtml" />                                                  
+                                                  <p:submenu label="Wydarzenia" >
+                                                        <p:menuitem value="Moje wydarzenia" outcome="/user_views/events/List.xhtml" />
+                                                        <p:menuitem value="Wydarzenia znajomych" outcome="/user_views/events/List.xhtml" />
+                                                  </p:submenu>
+                                                  <p:menuitem value="Recenzje i artykuły" outcome="/user_views/reviews/List.xhtml" />
+                                                  <p:menuitem value="Dodaj nową recenzje" outcome="/user_views/reviews/AddNewReview.xhtml" />
+                                                  <p:menuitem value="Poczta" outcome="/user_views/communication/List.xhtml" />
+                                                  <p:menuitem value="Wyloguj" action="#{userController.logout}" />
+
+                        </p:menubar>   
                      </h:form>
                 </p:layoutUnit>
                  <p:growl id="growl" life="3000" />
